--- a/sick-fits/backend/.env
+++ b/sick-fits/backend/.env
@@ -1,6 +1,6 @@
 FRONTEND_URL="http://localhost:7777"
-PRISMA_ENDPOINT="https://sick-fits-production.herokuapp.com/sick-fits-prod/prod"
+PRISMA_ENDPOINT="https://us1.prisma.sh/owen-stowe/obs-advanced-react-wesbos/dev"
 PRISMA_SECRET="beeboobingbong"
 APP_SECRET="jwtsecret123"
-STRIPE_SECRET="sk_123youchanget his"
+STRIPE_SECRET="sk_123youchangethis"
 PORT=4444
