--- a/sick-fits/backend/package.json
+++ b/sick-fits/backend/package.json
@@ -6,13 +6,13 @@
     "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env"
+    "deploy": "prisma deploy"
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
-    "dotenv": "6.0.0",
+    "dotenv": "^8.2.0",
     "graphql": "^0.13.2",
     "graphql-cli": "^2.16.7",
     "graphql-yoga": "1.16.2",
@@ -21,7 +21,7 @@
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
     "prisma": "1.17.1",
-    "prisma-binding": "2.1.6",
+    "prisma-binding": "^2.3.16",
     "stripe": "^6.12.1"
   },
   "license": "MIT",
