--- a/sick-fits/backend/prisma.yml
+++ b/sick-fits/backend/prisma.yml
@@ -1,6 +1,6 @@
-endpoint: https://us1.prisma.sh/owen-stowe/obs-advanced-react-wesbos/dev
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.graphql
-# secret: ${env:PRISMA_SECRET}
+secret: ${env:PRISMA_SECRET}
 hooks:
   post-deploy:
     - graphql get-schema -p prisma
